# mini-game

./: .gitignore  index.html  package.json  style.css  test-multiplayer-sync-fixed.js  test_output.txt
3d-maze-escape/: README.md  game.js  index.html  style.css
dice-battle/: README.md  index.html  main.js  style.css
game-1/: package-lock.json  package.json
game-1/docs/: dice_battle_plan.md  dice_battle_rules.md  project_structure.md
gng/: README.md  index.html  package.json  tsconfig.json
gng/docs/: .gitkeep  README.md  asset-management.md  code-conventions.md  development-guidelines.md  performance-optimization.md  phaser-patterns.md  project-architecture.md  refactoring-guide.md  refactoring-summary.md
gng/src/: main.js  main.ts
mini-hometown-dumpling/: index.html
mini-jump/: index.html
mini-mario/: index.html
mini-poe/: game.js  index.html  style.css
mini-roguelike/: index.html
mini-tekken/: index.html
senet/: README.md  index.html  multiplayer-game.js  multiplayer-protocol.md  multiplayer-ui.js  style.css
senet-multi/: README.md  index.html  script.js.backup  style.css
senet-multi/game/: script.js  style.css
senet-multi/js/: README.md  chat-system.js  game-logic.js  game-state.js  main.js  room-manager.js  ui-manager.js  websocket.js
senet-single/: index.html  style.css
server/rust/senet-socket-server/: API_DOCUMENTATION.md  Cargo.toml  docker-compose.yml  dockerfile
server/rust/senet-socket-server/src/: game.rs  handlers.rs  main.rs  messages.rs  room.rs  types.rs
spatial-audio-test/: index.html
viplay/: README.md
(+81 files in other folders)
